--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Pre-Engineering - College
                 <li>Chemistry</li>
                 <li>Physics</li>
-                <li>Maths</li>
+                <li>Mathematics</li>
     </section>
 
     <script src="app.js"></script>
