--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <li>Chemistry</li>
                 <li>Physics</li>
                 <li>Mathematics</li>
+                <h2>Certificates</h2>
+                <li>Deans list of honor's Spring 2022</li>
     </section>
 
     <script src="app.js"></script>
